--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -1,31 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Animal Shelter</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" >Animal Shelter</a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Animals<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Volunteer</a>
-      </li>
-      
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-    </ul>
-    <form *ngIf="!loggedIn()" #loginForm = "ngForm" class="form-inline my-2 my-lg-0" (ngSubmit) = "login()">
-      <input class="form-control mr-sm-2" type="text" name="username" 
-          placeholder="Username" required [(ngModel)]="model.username">
-      <input class="form-control mr-sm-2" type="password" name="password" 
-          placeholder="Password" required [(ngModel)]="model.password">
-      <button [disabled] = "!loginForm.valid" class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-    </form>
-    <li class="nav-item">
-      <a class="nav-link" (click)="logout()">Logout</a>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link">Animals</a>
     </li>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link">Volunteer</a>
+    </li>
+  </ul>
+
+  <div *ngIf="loggedIn()" class="dropdown" dropdown>
+    <a class="dropdown-toggle text-light" dropdownToggle>
+      Welcome {{authService.decodedToken?.unique_name | titlecase}}
+    </a>
+  
+    <div class="dropdown-menu mt-3" *dropdownMenu>
+      <a class="dropdown-item"><i class="fa fa-user"></i>Edit Profile</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
+    </div>
   </div>
+
+  <form *ngIf="!loggedIn()" #loginForm ="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)= "login()">
+    <input class="form-control mr-sm-2" type="text" name="username" 
+      placeholder="Username" required [(ngModel)]= "model.username">
+    <input class="form-control mr-sm-2" type="password" name="password" 
+      placeholder="Password" required [(ngModel)]= "model.password">
+    <button [disabled] = "!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+  </form>
+  </div>
+  
+
 </nav>
