Error handling, client-side login, no register

--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" >Animal Shelter</a>
+    <a class="navbar-brand" >Find A Pet</a>
 
   <ul class="navbar-nav mr-auto">
     <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link">Animals</a>
+      <a class="nav-link">Adopt</a>
     </li>
     <li class="nav-item" routerLinkActive="active">
       <a class="nav-link">Volunteer</a>
