--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -11,6 +11,20 @@
     </li>
   </ul>
 
+  <div *ngIf="!loginMode && !loggedIn()">
+    <button class="btn btn-success my-2 my-sm-0 mr-1" (click)="loginToggle()">Login</button>
+    <button class="btn btn-success my-2 my-sm-0">Sign-Up</button>
+  </div>
+
+  <form *ngIf="loginMode" #loginForm ="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)= "login()">
+    <input class="form-control mr-sm-2" type="text" name="username" 
+      placeholder="Username" required [(ngModel)]= "model.username">
+    <input class="form-control mr-sm-2" type="password" name="password" 
+      placeholder="Password" required [(ngModel)]= "model.password">
+    <button [disabled] = "!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+  </form>
+  </div>
+
   <div *ngIf="loggedIn()" class="dropdown" dropdown>
     <a class="dropdown-toggle text-light" dropdownToggle>
       Welcome {{authService.decodedToken?.unique_name | titlecase}}
@@ -21,15 +35,6 @@
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
     </div>
-  </div>
-
-  <form *ngIf="!loggedIn()" #loginForm ="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)= "login()">
-    <input class="form-control mr-sm-2" type="text" name="username" 
-      placeholder="Username" required [(ngModel)]= "model.username">
-    <input class="form-control mr-sm-2" type="password" name="password" 
-      placeholder="Password" required [(ngModel)]= "model.password">
-    <button [disabled] = "!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-  </form>
   </div>
   
 
