--- a/AnimalShelter-SPA/src/app/home/home.component.html
+++ b/AnimalShelter-SPA/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
       <div *ngIf= "!registerMode" style="text-align: left">
         <div class="text-center">
-          <button class="btn btn-primary btn-lg mr-1">Adopt</button>
+          <button class="btn btn-primary btn-lg mr-1" [routerLink]="['/animals']">Adopt</button>
           <button class="btn btn-primary btn-lg ml-1" (click)="registerToggle()">Rehome</button>
         </div>
       </div>
