--- a/AnimalShelter-SPA/src/app/login/login.component.html
+++ b/AnimalShelter-SPA/src/app/login/login.component.html
@@ -1,12 +1,8 @@
-
-
-
 <div  class="container">
   <div class="row justify-content-center">
     <div class="col-4">
-      <form #registerForm="ngForm" (ngSubmit)="register()">
-        <h2 class="text-center text-primary">Sign Up</h2>
-        <hr>
+      <form #loginForm="ngForm" (ngSubmit)="login()">
+        <h2>Login</h2>
       
         <div class="form-group">
           <input type="text" class="form-control" required name="username" [(ngModel)]="model.username" placeholder="Username">
@@ -17,12 +13,12 @@
         </div>
       
         <div class="form-group text-center">
-          <button class="btn btn-success" [disabled]="!registerForm.valid" type="submit">Register</button>
+          <button class="btn btn-success" type="submit">Login</button>
           <button class="btn btn-default" type="button" [routerLink]="['/home']">Cancel</button>
         </div>
-        
       </form>
     </div>
   </div>
 </div>
+
 
