--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -1,14 +1,42 @@
-<div class="container mt-5">
-  <div class="text-center">
-    <p>You will need to register as a guardian first.</p>
-    <button class="btn btn-primary btn-lg mr-1" [routerLink]="['/register']">Register</button>
-  </div>
-</div>
 
 <div class="container mt-5">
-  <div class="text-center">
-    <p>Already have an account?</p>
-    <button class="btn btn-primary btn-lg ml-1" [routerLink]="['/login']">Sign-In</button>
-  </div>
+    <div class="text-center">
+      <p>You will need to register as a guardian first.</p>
+      <button class="btn btn-primary btn-lg mr-1" [routerLink]="['/register']">Register</button>
+    </div>
+  
+    <div class="text-center">
+      <p>Already have an account?</p>
+      <button class="btn btn-primary btn-lg ml-1" [routerLink]="['/login']">Sign-In</button>
+    </div>
 </div>
 
+<div  class="container">
+  <div class="row justify-content-center">
+    <div class="col-4">
+      <form #registerForm="ngForm">
+        <h2 class="text-center text-primary">Create Your Pet's Profile</h2>
+        <hr>
+
+        <div class="form-group">
+          <input type="text" class="form-control" required name="name" placeholder="Name">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" required name="gender" placeholder="Gender">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" required name="age" placeholder="Age">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" required name="species" placeholder="Species">
+        </div>
+
+        <div class="form-group text-center">
+          <button class="btn btn-success" [disabled]="!registerForm.valid" type="submit">Create Profile</button>
+          <button class="btn btn-default" type="button" [routerLink]="['/home']">Cancel</button>
+        </div>
+        
+      </form>
+    </div>
+  </div>
+</div>
