--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
@@ -1,16 +1,18 @@
 
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img class="card-img-top" src="{{animal.photoUrl}}" alt="{{animal.name}}">
+    <div>
+      <img class="card-img-top" src="{{animal.photoUrl}}" alt="{{animal.name}}">
+    </div>
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" 
-        [routerLink]="['/animals/', animal.id]"><i class="fa fa-user"></i></button></li>
+        [routerLink]="['/animals/', animal.id]"><i class="fa fa-paw"></i></button></li>
       <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-heart"></i></button></li>
       <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-envelope"></i></button></li>
     </ul>
   </div>
   <div class="card-body p-1">
-    <h6 class="card-title text-center mb-1"><i class="fa fa-user"></i>
+    <h6 class="card-title text-center mb-1"><i class="fa fa-paw"></i>
       {{animal.name}}
     </h6>
   </div>
