--- a/AnimalShelter-SPA/src/app/register/register.component.html
+++ b/AnimalShelter-SPA/src/app/register/register.component.html
@@ -15,6 +15,18 @@
         <div class="form-group">
           <input type="password" class="form-control" required name="password" [(ngModel)]="model.password" placeholder="Password">
         </div>
+
+        <div class="form-group">
+          <input type="text" class="form-control" required name="knownAs" [(ngModel)]="model.knownAs" placeholder="Known As">
+        </div>
+
+        <div class="form-group">
+          <input type="text" class="form-control" required name="city" [(ngModel)]="model.city" placeholder="City">
+        </div>
+
+        <div class="form-group">
+          <input type="text" class="form-control" required name="state" [(ngModel)]="model.state" placeholder="State">
+        </div>
       
         <div class="form-group text-center">
           <button class="btn btn-success" [disabled]="!registerForm.valid" type="submit">Register</button>
