--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -1,5 +1,5 @@
 
-<div class="container mt-5">
+<div *ngIf="!loggedIn()" class="container mt-5">
     <div class="text-center">
       <p>You will need to register as a guardian first.</p>
       <button class="btn btn-primary btn-lg mr-1" [routerLink]="['/register']">Register</button>
@@ -11,28 +11,28 @@
     </div>
 </div>
 
-<div  class="container">
+<div *ngIf="loggedIn()" class="container">
   <div class="row justify-content-center">
     <div class="col-4">
-      <form #registerForm="ngForm">
+      <form #animalRegisterForm="ngForm" (ngSubmit)="registerAnimal()">
         <h2 class="text-center text-primary">Create Your Pet's Profile</h2>
         <hr>
 
         <div class="form-group">
-          <input type="text" class="form-control" required name="name" placeholder="Name">
+          <input type="text" class="form-control" required name="name" [(ngModel)]="model.name" placeholder="Name">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" required name="gender" placeholder="Gender">
+          <input type="text" class="form-control" required name="gender" [(ngModel)]="model.gender" placeholder="Gender">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" required name="age" placeholder="Age">
+          <input type="text" class="form-control" required name="age" [(ngModel)]="model.age" placeholder="Age">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" required name="species" placeholder="Species">
+          <input type="text" class="form-control" required name="species" [(ngModel)]="model.species" placeholder="Species">
         </div>
 
         <div class="form-group text-center">
-          <button class="btn btn-success" [disabled]="!registerForm.valid" type="submit">Create Profile</button>
+          <button class="btn btn-success" [disabled]="!animalRegisterForm.valid" type="submit">Create Profile</button>
           <button class="btn btn-default" type="button" [routerLink]="['/home']">Cancel</button>
         </div>
         
