--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
 
   <ul class="navbar-nav mr-auto">
     <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/animals']">Adopters</a>
+      <a class="nav-link" [routerLink]="['/animals']">Browse Pets</a>
     </li>
     <li class="nav-item" routerLinkActive="active">
       <a class="nav-link" [routerLink]="['/messages']">Guardians</a>
