--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
@@ -2,7 +2,7 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
     <div>
-      <img class="card-img-top" src="{{animal.photoUrl}}" alt="{{animal.name}}">
+      <img class="card-img-top" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
     </div>
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" 
@@ -12,7 +12,7 @@
     </ul>
   </div>
   <div class="card-body p-1">
-    <h6 class="card-title text-center mb-1"><i class="fa fa-paw"></i>
+    <h6 class="card-title text-center mb-1">
       {{animal.name}}
     </h6>
   </div>
