--- a/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
+++ b/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
@@ -7,12 +7,10 @@
                 <strong>{{animal.name}}</strong>
               </div>
               <div class="row">
-                <div class="col md-4">
-                  <div>
-                    <img class="card-img-top img-thumbnail" src="{{animal.photoUrl}}" alt="{{animal.name}}">
-                  </div>
+                <div class="col md-3">
+                    <img class="card-img-top img-thumbnail" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
                 </div>
-                <div class="col md-8">
+                <div class="col md-9">
                   <p>Posted: {{animal.posted}}</p>
                   <p>Time Left to Adopt: {{animal.timeLeftToAdopt}}</p>
                   <p>Saved by # people</p>
@@ -21,9 +19,9 @@
             </div>
             <div class="card-footer">
               <div class="btn-group d-flex">
-                <button class="btn btn-success mr-1" [routerLink]="['/messages']" routerLinkActive="router-link-active" >Messages</button>
-                <button class="btn btn-primary mr-1 ml-1" [routerLink]="['/animal/edit',animal.id]" routerLinkActive="router-link-active" >Edit Profile</button>
-                <button class="btn btn-danger ml-1">Mark As Adopted</button>
+                <button class="btn btn-success mr-1" [routerLink]="['/messages']" routerLinkActive="router-link-active" > <i class="fa fa-envelope"> Messages</i> </button>
+                <button class="btn btn-primary mr-1 ml-1" [routerLink]="['/animal/edit',animal.id]" routerLinkActive="router-link-active" ><i class="fa fa-pencil"> Edit Profile</i></button>
+                <button class="btn btn-warning ml-1"><i class="fa fa-check"> Mark As Adopted</i></button>
               </div>
             </div>
           </div>
