Fixed delete, set main, get animal mapping issue

--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -45,7 +45,7 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            Photo editor goes here
+            <app-photo-editor [animal]="animal"></app-photo-editor>
           </tab>
         </tabset>
       </div>
