Added Tags Entity

--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -50,8 +50,8 @@
           <tab heading="Photos">
             <ngx-gallery style="display: inline-block; margin-bottom:20px;" [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery> 
           </tab>
-          <tab heading="Messages">
-            <p>Messages will go here.</p>
+          <tab heading="Location">
+            <p>Map will go here</p>
           </tab>
         </tabset>
       </div>
