--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
@@ -15,5 +15,8 @@
     <h6 class="card-title text-center mb-1">
       {{animal.name}}
     </h6>
+    <div id="viewBar">
+      <i class="fa fa-eye mr-3"> {{animal.views}}</i><i class="fa fa-heart mr-3"> {{animal.saves}}</i> <i class="fa fa-comment-o"> {{animal.inquiries}}</i>
+    </div>
   </div>
 </div>
