--- a/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
+++ b/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
@@ -16,6 +16,9 @@
                   <p>Saved by # people</p>
                 </div>
               </div>
+              <div id="viewBar">
+                <i class="fa fa-eye mr-3"> {{animal.views}}</i><i class="fa fa-heart mr-3"> {{animal.saves}}</i> <i class="fa fa-comment-o"> {{animal.inquiries}}</i>
+              </div>
             </div>
             <div class="card-footer">
               <div class="btn-group d-flex">
