--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -25,20 +25,50 @@
         <tabset class="member-tabset">
           <tab heading="Edit Profile">
             <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
-              <div class="row">
+              <div class="row mt-2">
                 <div class="col-sm-8">
                   <h4>About {{animal.name}}</h4>
                   <textarea name="description" rows="5" class="form-control" 
                     [(ngModel)]="animal.description"></textarea>
-                  <h4>Likes</h4>
-                    <textarea name="likes" rows="5" class="form-control" 
-                      [(ngModel)]="animal.likes"></textarea>
-                  <h4>Qualities</h4>
-                    <textarea name="qualities" rows="5" class="form-control" 
-                      [(ngModel)]="animal.qualities"></textarea>
-                  <h4>Good With</h4>
-                    <textarea name="good with" rows="5" class="form-control" 
-                      [(ngModel)]="animal.goodWith"></textarea>
+                    <div class="form-group mt-2">
+                      <h5>{{animal.name}} likes: </h5>
+                      <div class="row">
+                        <div class="col-sm-4" *ngFor="let like of this.likes">
+                          <div class="form-check" onchange="addToLikes(like)" >
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                              {{like}}
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <h5>{{animal.name}} is: </h5>
+                      <div class="row">
+                        <div class="col-sm-4" *ngFor="let quality of this.qualities">
+                          <div class="form-check" >
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                              {{quality}}
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <h5>{{animal.name}} is good with:</h5>
+                      <div class="row">
+                        <div class="col-sm-4" *ngFor="let goodWith of this.goodWith">
+                          <div class="form-check" >
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                              {{goodWith}}
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                 </div>
                 <div class="col-sm-4">
                   <h6 class="mt-1">Name</h6>
