--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -4,14 +4,13 @@
       <p>You will need to register as a guardian first.</p>
       <button class="btn btn-primary btn-lg mr-1" [routerLink]="['/register']">Register</button>
     </div>
-  
     <div class="text-center">
       <p>Already have an account?</p>
       <button class="btn btn-primary btn-lg ml-1" [routerLink]="['/login']">Sign-In</button>
     </div>
 </div>
 
-<div *ngIf="loggedIn()" class="container">
+<div *ngIf="loggedIn()" class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-4">
       <form #animalRegisterForm="ngForm" (ngSubmit)="registerAnimal()">
@@ -30,6 +29,52 @@
         <div class="form-group">
           <input type="text" class="form-control" required name="species" [(ngModel)]="model.species" placeholder="Species">
         </div>
+        <div class="form-group">
+          <input type="text" class="form-control" required name="breed" [(ngModel)]="model.breed" placeholder="Breed">
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" required name="adoptionFee" [(ngModel)]="model.adoptionFee" placeholder="Adoption Fee ($)">
+        </div>
+        <div class="form-group">
+          <h5>Your pet likes: </h5>
+          <div class="row">
+            <div class="col-sm-4" *ngFor="let like of this.likes">
+              <div class="form-check" onchange="addToLikes(like)" >
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                  {{like}}
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <h5>Your pet is: </h5>
+          <div class="row">
+            <div class="col-sm-4" *ngFor="let quality of this.qualities">
+              <div class="form-check" >
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                  {{quality}}
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <h5>Your pet is good with:</h5>
+          <div class="row">
+            <div class="col-sm-4" *ngFor="let goodWith of this.goodWith">
+              <div class="form-check" >
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                  {{goodWith}}
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+        
         <!-- <div class="form-group">
           <input type="text" class="form-control" required name="timeLeft" [(ngModel)]="model.timeLeftToAdopt" placeholder="How many more days will you keep your pet?">
         </div> -->
