--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -30,45 +30,6 @@
                   <h4>About {{animal.name}}</h4>
                   <textarea name="description" rows="5" class="form-control" 
                     [(ngModel)]="animal.description"></textarea>
-                    <div class="form-group mt-2">
-                      <h5>{{animal.name}} likes: </h5>
-                      <div class="row">
-                        <div class="col-sm-4" *ngFor="let like of this.likes">
-                          <div class="form-check" onchange="addToLikes(like)" >
-                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                            <label class="form-check-label" for="defaultCheck1">
-                              {{like}}
-                            </label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <h5>{{animal.name}} is: </h5>
-                      <div class="row">
-                        <div class="col-sm-4" *ngFor="let quality of this.qualities">
-                          <div class="form-check" >
-                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                            <label class="form-check-label" for="defaultCheck1">
-                              {{quality}}
-                            </label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <h5>{{animal.name}} is good with:</h5>
-                      <div class="row">
-                        <div class="col-sm-4" *ngFor="let goodWith of this.goodWith">
-                          <div class="form-check" >
-                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                            <label class="form-check-label" for="defaultCheck1">
-                              {{goodWith}}
-                            </label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
                 </div>
                 <div class="col-sm-4">
                   <h6 class="mt-1">Name</h6>
@@ -92,6 +53,9 @@
                 </div>
               </div>
             </form>
+          </tab>
+          <tab heading="Edit Tags">
+            <app-tag-editor [animal]="animal"></app-tag-editor>
           </tab>
           <tab heading="Edit Photos">
             <app-photo-editor [animal]="animal"></app-photo-editor>
