--- a/AnimalShelter-SPA/src/app/tag-editor/tag-editor.component.html
+++ b/AnimalShelter-SPA/src/app/tag-editor/tag-editor.component.html
@@ -3,7 +3,7 @@
   <h5>{{animal.name}} likes: </h5>
   <div class="row">
     <div class="col-sm-4" *ngFor="let like of this.likes">
-      <div class="form-check" (click)="addTag(like, animal.id)" >
+      <div class="form-check" (click)="addTag(like, animal.id, 'like')" >
         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
         <label class="form-check-label" for="defaultCheck1">
           {{like}}
@@ -16,7 +16,7 @@
   <h5>{{animal.name}} is: </h5>
   <div class="row">
     <div class="col-sm-4" *ngFor="let quality of this.qualities">
-      <div class="form-check" >
+      <div class="form-check" (click)="addTag(quality, animal.id, 'quality')" >
         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
         <label class="form-check-label" for="defaultCheck1">
           {{quality}}
@@ -29,7 +29,7 @@
   <h5>{{animal.name}} is good with:</h5>
   <div class="row">
     <div class="col-sm-4" *ngFor="let goodWith of this.goodWith">
-      <div class="form-check" >
+      <div class="form-check" (click)="addTag(goodWith, animal.id, 'goodWith')" >
         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
         <label class="form-check-label" for="defaultCheck1">
           {{goodWith}}
