--- a/AnimalShelter-SPA/src/app/tag-editor/tag-editor.component.html
+++ b/AnimalShelter-SPA/src/app/tag-editor/tag-editor.component.html
@@ -1,10 +1,9 @@
-
 <div class="form-group mt-2">
   <h5>{{animal.name}} likes: </h5>
   <div class="row">
     <div class="col-sm-4" *ngFor="let like of this.likes">
       <div class="form-check" (click)="addTag(like, animal.id, 'like')" >
-        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+        <input class="form-check-input" type="checkbox" [(ngModel)]="this.likesChecks[like]" value="" id="defaultCheck1" >
         <label class="form-check-label" for="defaultCheck1">
           {{like}}
         </label>
