--- a/AnimalShelter-SPA/src/app/tag-editor/tag-editor.component.html
+++ b/AnimalShelter-SPA/src/app/tag-editor/tag-editor.component.html
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col-sm-4" *ngFor="let quality of this.qualities">
       <div class="form-check" (click)="addTag(quality, animal.id, 'quality')" >
-        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+        <input class="form-check-input" type="checkbox" [(ngModel)]="this.qualitiesChecks[quality]" value="" id="defaultCheck1">
         <label class="form-check-label" for="defaultCheck1">
           {{quality}}
         </label>
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="col-sm-4" *ngFor="let goodWith of this.goodWith">
       <div class="form-check" (click)="addTag(goodWith, animal.id, 'goodWith')" >
-        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+        <input class="form-check-input" type="checkbox" [(ngModel)]="this.goodWithChecks[goodWith]" value="" id="defaultCheck1">
         <label class="form-check-label" for="defaultCheck1">
           {{goodWith}}
         </label>
