--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.css
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.css
@@ -1,7 +1,35 @@
 .img-thumbnail {
-    width: auto;
+    width: 100%;
     height: 325px;
     object-fit: cover;
+}
+
+#picContainer .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-325%, 25%);
+    background-color: darksalmon;
+    color: white;
+    font-size: 16px;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+
+  #picContainer .btn:hover {
+    background-color: rgb(153, 56, 56);
+  }
+
+#messageButton {
+    background-color: rgb(118, 206, 235);
+    width: 40px;
+    transform: translate(75%, 0);
+}
+
+#messageButton:hover {
+    background-color: lightskyblue;
 }
 
 #mainCard {
@@ -12,7 +40,7 @@
 }
 
 #innerCard {
-    height: 90px;
+    height: 70px;
     border: none;
 }
 
