--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -38,7 +38,7 @@
     </a>
   
     <div class="dropdown-menu mt-3" *dropdownMenu>
-      <a class="dropdown-item"><i class="fa fa-user"></i>Edit Profile</a>
+      <a class="dropdown-item" [routerLink]="['/user-edit']" routerLinkActive="router-link-active" ><i class="fa fa-user"></i>Edit Profile</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" [routerLink]="['/your-animals']"><i class="fa fa-paw"></i>Your Pets</a>
       <div class="dropdown-divider"></div>
