--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -18,73 +18,50 @@
         <hr>
 
         <div class="form-group">
-          <input type="text" class="form-control" required name="name" [(ngModel)]="model.name" placeholder="Name">
+          <input type="text" class="form-control" required name="name" placeholder="Name">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" required name="gender" [(ngModel)]="model.gender" placeholder="Gender">
+          <input type="text" class="form-control" required name="gender" placeholder="Gender">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" required name="age" [(ngModel)]="model.age" placeholder="Age">
+          <input type="text" class="form-control" required name="age" placeholder="Age">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" required name="species" [(ngModel)]="model.species" placeholder="Species">
+          <input type="text" class="form-control" required name="species" placeholder="Species">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" required name="breed" [(ngModel)]="model.breed" placeholder="Breed">
+          <input type="text" class="form-control" required name="breed"  placeholder="Breed">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" required name="adoptionFee" [(ngModel)]="model.adoptionFee" placeholder="Adoption Fee ($)">
+          <input type="text" class="form-control" required name="adoptionFee" placeholder="Adoption Fee ($)">
         </div>
+
+        <label>Likes</label>
         <div class="form-group">
-          <h5>Your pet likes: </h5>
-          <div class="row">
-            <div class="col-sm-4" *ngFor="let like of this.likes">
-              <div class="form-check" onchange="addToLikes(like)" >
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
-                  {{like}}
-                </label>
-              </div>
-            </div>
-          </div>
+            <label class="checkbox-inline">
+                <input type="checkbox" name="Likes" (click)="addOrRemove('walks','like')"> Walks
+            </label>
+            <label class="checkbox-inline">
+                <input type="checkbox" name="Likes" (click)="addOrRemove('cuddles','like')"> Cuddles
+            </label>
         </div>
+
+        <label>Qualities</label>
         <div class="form-group">
-          <h5>Your pet is: </h5>
-          <div class="row">
-            <div class="col-sm-4" *ngFor="let quality of this.qualities">
-              <div class="form-check" >
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
-                  {{quality}}
-                </label>
-              </div>
-            </div>
-          </div>
+            <label class="checkbox-inline">
+                <input type="checkbox" name="Qualities" (click)="addOrRemove('friendly','quality')"> Friendly
+            </label>
+            <label class="checkbox-inline">
+                <input type="checkbox" name="Qualities" (click)="addOrRemove('energetic','quality')"> Energetic
+            </label>
         </div>
-        <div class="form-group">
-          <h5>Your pet is good with:</h5>
-          <div class="row">
-            <div class="col-sm-4" *ngFor="let goodWith of this.goodWith">
-              <div class="form-check" >
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
-                  {{goodWith}}
-                </label>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-        <!-- <div class="form-group">
-          <input type="text" class="form-control" required name="timeLeft" [(ngModel)]="model.timeLeftToAdopt" placeholder="How many more days will you keep your pet?">
-        </div> -->
 
         <div class="form-group text-center">
-          <button class="btn btn-success" [disabled]="!animalRegisterForm.valid" type="submit">Create Profile</button>
-          <button class="btn btn-default" type="button" [routerLink]="['/home']">Cancel</button>
+          <button class="btn btn-success" type="submit" (click)="registerAnimal()">Register</button>
+          <button class="btn btn-default" type="button">Cancel</button>
         </div>
-        
       </form>
     </div>
   </div>
 </div>
+
