--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -4,7 +4,7 @@
       <div class="card" id="mainCard">
         <div class="container" id="picContainer">
           <img class="card-img-top img-thumbnail" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
-          <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+          <button class="btn btn-primary" (click)="saveAnimal(animal.id)"><i class="fa fa-heart"></i></button>
         </div>
         <div id="mainCardBody" class="card-body">
           <div id="viewBar">
