--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -35,6 +35,9 @@
         <div class="form-group">
           <input type="text" class="form-control" required name="adoptionFee" placeholder="Adoption Fee ($)">
         </div>
+        <div class="form-group">
+          <input type="date" class="form-control" required name="adoptBy" placeholder="Adopt By">
+        </div>
 
         <label>Likes</label>
         <div class="form-group">
