Time remaining added to card and your-pets

--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.css
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.css
@@ -59,3 +59,16 @@ div {
     height:100%;
     overflow: hidden;
 }
+
+.container {
+    position: relative;
+    
+}
+
+#timeLeft {
+    color: rgb(255, 0, 0);
+    padding: 2%;
+    position: absolute;
+    top: 8px;
+    right: 5px;
+  }
