--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
@@ -3,6 +3,7 @@
   <div class="card-img-wrapper">
     <div>
       <img class="card-img-top" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
+      <i class="fa fa-hourglass" id="timeLeft">{{timeLeft}}</i>
     </div>
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" 
