--- a/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
+++ b/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="col md-9">
                   <p>Posted: {{animal.posted}}</p>
-                  <p>Time Left to Adopt: {{animal.timeLeftToAdopt}}</p>
+                  <p><i class="fa fa-hourglass"></i> {{timeLefts[animal.id]}} Days Left</p>
                   <p>Saved by # people</p>
                 </div>
               </div>
