pagination in the api

--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -34,8 +34,8 @@
                     [(ngModel)]="animal.description"></textarea>
                   <div class="row">
                     <div class="col">
-                      <h6 class="mt-2">Species</h6>
-                      <select class="form-control" id="species" name="species" rows="1" [(ngModel)]="animal.species">
+                      <h6 class="mt-2">Pet Type</h6>
+                      <select class="form-control" id="petType" name="petType" rows="1" [(ngModel)]="animal.species">
                         <option>Dog</option>
                         <option>Cat</option>
                         <option>Fish</option>
